<resources>
    <string name="app_name">Tabulador de refeições</string>
    <string name="author_data">Renan Santos Carvalho 1110482313034</string>
    <string name="alimentos_title">Alimentos</string>
    <string name="bebidas_title">Bebidas</string>
    <string name="nova_refeicao_title">Nova Refeição</string>
    <string name="resumo_refeicoes_title">Resumo refeições</string>
    <string name="algo_deu_errado">\"Algo deu errado!\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atualizar">Atualizar</string>
    <string name="deletar">Deletar</string>
    <string name="todos">Todos</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="salvar">Salvar</string>
    <string name="calorias_kcal">Calorias (kcal)</string>
    <string name="carboidratos_g">Carboidratos (g)</string>
    <string name="gordura_g">Gordura (g)</string>
    <string name="id">Id</string>
    <string name="nome_alimento">Nome Alimento</string>
    <string name="proteinas_g">Proteinas (g)</string>
    <string name="acucar_g">Açucar (g)</string>
    <string name="nome_bebida">Nome Bebida</string>
    <string name="volume_ml">Volume (ml)</string>
    <string name="quantidade">Quantidade</string>
    <string name="nome_refeicao">Nome Refeição</string>
    <string name="adicionar">adicionar</string>
    <string name="remover">remover</string>
    <string name="data">data (padrão = hoje)</string>
</resources>