<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlimentoFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/alimentos_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdA"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etNomeA"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etCaloriasA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/calorias_kcal"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etNomeA"
        app:layout_constraintTop_toBottomOf="@+id/etNomeA" />

    <EditText
        android:id="@+id/etCarboidratosA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/carboidratos_g"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etCaloriasA"
        app:layout_constraintTop_toBottomOf="@+id/etCaloriasA" />

    <EditText
        android:id="@+id/etGorduraA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/gordura_g"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etProteinasA"
        app:layout_constraintTop_toBottomOf="@+id/etProteinasA" />

    <EditText
        android:id="@+id/etNomeA"
        android:layout_width="378dp"
        android:layout_height="53dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/nome_alimento"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdA" />

    <EditText
        android:id="@+id/etProteinasA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/proteinas_g"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etNomeA"
        app:layout_constraintTop_toBottomOf="@+id/etNomeA" />

    <Button
        android:id="@+id/btnPesquisarA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:text="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="@+id/etNomeA"
        app:layout_constraintTop_toTopOf="@+id/etIdA" />

    <Button
        android:id="@+id/btnAtualizarA"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="@+id/etGorduraA"
        app:layout_constraintTop_toBottomOf="@+id/etGorduraA" />

    <Button
        android:id="@+id/btnSalvarA"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="@+id/etCarboidratosA"
        app:layout_constraintTop_toBottomOf="@+id/etCarboidratosA" />

    <Button
        android:id="@+id/btnListarA"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/todos"
        app:layout_constraintEnd_toEndOf="@+id/btnAtualizarA"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarA" />

    <Button
        android:id="@+id/btnDeletarA"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/deletar"
        app:layout_constraintStart_toStartOf="@+id/btnSalvarA"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvarA" />

    <TextView
        android:id="@+id/tvResultA"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeletarA" />
</androidx.constraintlayout.widget.ConstraintLayout>