<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlimentoFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/bebidas_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdB"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etNomeB"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/etCaloriasA"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/calorias_kcal"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etNomeB"
        app:layout_constraintTop_toBottomOf="@+id/etNomeB" />

    <EditText
        android:id="@+id/etAcucarB"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/acucar_g"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etCaloriasA"
        app:layout_constraintTop_toBottomOf="@+id/etCaloriasA" />

    <EditText
        android:id="@+id/etNomeB"
        android:layout_width="378dp"
        android:layout_height="53dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/nome_bebida"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdB" />

    <EditText
        android:id="@+id/etVolumeB"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/volume_ml"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/etNomeB"
        app:layout_constraintTop_toBottomOf="@+id/etNomeB" />

    <Button
        android:id="@+id/btnPesquisarB"
        android:layout_width="182dp"
        android:layout_height="53dp"
        android:text="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="@+id/etNomeB"
        app:layout_constraintTop_toTopOf="@+id/etIdB" />

    <Button
        android:id="@+id/btnAtualizarB"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="@+id/etVolumeB"
        app:layout_constraintTop_toBottomOf="@+id/etAcucarB" />

    <Button
        android:id="@+id/btnSalvarB"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="13dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="@+id/etAcucarB"
        app:layout_constraintTop_toBottomOf="@+id/etAcucarB" />

    <Button
        android:id="@+id/btnListarB"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/todos"
        app:layout_constraintEnd_toEndOf="@+id/btnAtualizarB"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarB" />

    <Button
        android:id="@+id/btnDeletarB"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/deletar"
        app:layout_constraintStart_toStartOf="@+id/btnSalvarB"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvarB" />

    <TextView
        android:id="@+id/tvResultB"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeletarB" />
</androidx.constraintlayout.widget.ConstraintLayout>