<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlimentoFragment">


    <EditText
        android:id="@+id/etQuantItemR"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/quantidade"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveItemR"
        app:layout_constraintTop_toBottomOf="@+id/rgConsumivelR" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/nova_refeicao_title"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etIdR"
        android:layout_width="173dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/id"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etDataR"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/etDataR"
        android:layout_width="379dp"
        android:layout_height="56dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/data"
        android:importantForAutofill="no"
        android:inputType="datetime|date"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/rgConsumivelR"
        app:layout_constraintTop_toBottomOf="@+id/btnPesquisarR" />

    <Button
        android:id="@+id/btnPesquisarR"
        android:layout_width="182dp"
        android:layout_height="56dp"
        android:text="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="@+id/etDataR"
        app:layout_constraintTop_toTopOf="@+id/etIdR" />

    <Button
        android:id="@+id/btnRemoveItemR"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:text="@string/remover"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdateR"
        app:layout_constraintTop_toBottomOf="@+id/etQuantItemR" />

    <Button
        android:id="@+id/btnAddItemR"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="15dp"
        android:text="@string/adicionar"
        app:layout_constraintStart_toStartOf="@+id/btnSalvarR"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnUpdateR"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/atualizar"
        app:layout_constraintEnd_toEndOf="@+id/tvResultR"
        app:layout_constraintTop_toBottomOf="@+id/btnRemoveItemR" />

    <Button
        android:id="@+id/btnSalvarR"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toStartOf="@+id/tvResultR"
        app:layout_constraintTop_toBottomOf="@+id/btnAddItemR" />

    <TextView
        android:id="@+id/tvResultR"
        android:layout_width="379dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSalvarR" />

    <RadioGroup
        android:id="@+id/rgConsumivelR"
        android:layout_width="378dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/etDataR">

        <RadioButton
            android:id="@+id/rbAlimentoR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alimentos_title" />

        <RadioButton
            android:id="@+id/rbBebidaR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bebidas_title" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="@+id/btnAddItemR"
        app:layout_constraintTop_toBottomOf="@+id/rgConsumivelR" />
</androidx.constraintlayout.widget.ConstraintLayout>